  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LaunchActivity">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="left|center"
          android:paddingBottom="10dp" >

          <TextView android:id="@+id/app_title"
                  android:text="@string/app_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="40sp"
                  android:textColor="#595959"
              android:paddingLeft="10dp"/>

          <ImageView android:id="@+id/receiving_data_iv"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/red_icon"
            android:layout_toEndOf="@id/app_title"
            android:layout_alignBottom="@id/app_title"
            android:visibility="invisible"/>

          <Button android:id="@+id/user_name_btn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/edit"
              android:layout_alignParentRight="true"
              android:layout_alignBottom="@id/app_title"/>

          <EditText android:id="@+id/user_name"
              android:layout_width="120dp"
              android:layout_height="wrap_content"
              android:maxLength="10"
              android:inputType="text"
              android:layout_toLeftOf="@id/user_name_btn"
              android:layout_alignBottom="@id/app_title" />

          <TextView android:id="@+id/user_name_tv"
              android:text="@string/user_name_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toLeftOf="@id/user_name"
              android:layout_alignBottom="@id/app_title"
              android:paddingBottom="4dp" />
      </RelativeLayout>

//this layout will be removed
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="left|center" >

          <!--<RadioGroup-->
              <!--android:id="@+id/gender_radio"-->
              <!--android:layout_width="wrap_content"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:orientation="horizontal">-->

              <!--<RadioButton android:id="@+id/radio_female"-->
                   <!--android:layout_width="wrap_content"-->
                   <!--android:layout_height="wrap_content"-->
                   <!--android:text="@string/radio_female"-->
                  <!--android:textSize="8sp" />-->

              <!--<RadioButton android:id="@+id/radio_male"-->
                   <!--android:layout_width="wrap_content"-->
                   <!--android:layout_height="wrap_content"-->
                   <!--android:text="@string/radio_male"-->
                  <!--android:textSize="8sp"/>-->
          <!--</RadioGroup>-->
      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="left|center"
          android:paddingBottom="10dp">

          <Button android:id="@+id/truncateDataButton"
              android:text="@string/truncate_bt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"/>

          <Button android:id="@+id/editDataButton"
              android:text="@string/edit_bt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toLeftOf="@id/truncateDataButton"/>

          <TextView android:id="@+id/dataCountText"
              android:text="@string/data_count_none_tv"
              android:textSize="12sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="5dp"
              android:layout_alignBottom="@id/truncateDataButton"/>

          <Button android:id="@+id/archiveButton"
              android:layout_below="@id/truncateDataButton"
              android:text="@string/archive_bt"
              android:layout_width="match_parent"
              android:layout_height="60dp"/>
      </RelativeLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingBottom="5dp"
          android:weightSum="2">

          <ToggleButton android:id="@+id/aloneToggleButton"
              android:textOff="@string/alone_bt"
              android:textOn="@string/alone_bt"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content" />

          <ToggleButton android:id="@+id/togetherToggleButton"
              android:textOff="@string/together_bt"
              android:textOn="@string/together_bt"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content" />
      </LinearLayout>

      <TextView android:id= "@+id/timeCountTextView"
          android:paddingBottom="10dp"
          android:textSize="14sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"  />

      <GridView android:id="@+id/label_grid_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:numColumns="3"
          android:verticalSpacing="0dp"
          android:horizontalSpacing="0dp"
          android:stretchMode="columnWidth"
          android:gravity="center"/>

      <GridView android:id="@+id/label_grid_view_none"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:verticalSpacing="0dp"
          android:horizontalSpacing="0dp"
          android:stretchMode="columnWidth"
          android:gravity="center"/>

      //this view will be removed
      <ListView
          android:id="@+id/label_list_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />
      <!-- android:background="@color/list_view_item_color_selector"/> -->

  </LinearLayout>
